# rust_basitcrud

./: Cargo.toml  README.md
migrations/: 0001_product.sql  0002_Users.sql
src/: error.rs  main.rs  utils.rs
src/controllers/: auth.rs  user.rs
src/models/: auth.rs
